# job_scorer

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  implementation-roadmap.md  job-skill-matrix-scoring-v1.py  job-skill-matrix-scoring-v2.py  matrix-fixed_g.csv  matrix-gpt-csv.csv  matrix.csv  pyproject.toml  pytest.ini  requirements.txt  test-excellent-match.csv  tester.cv
.claude/: settings.local.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
archive/: scoring_v1.py  scoring_v2_backup.py
data/: edge_case_test.csv  example_c_suite.csv  example_senior_ic.csv  executive_test.csv  test-no-core-gaps.csv  v2_test1.csv  v2_text_gem.csv  validation_director_hybrid.csv  validation_junior_executive_gaps.csv  validation_senior_executive_biotech.csv  validation_senior_ic_technical.csv  validation_test_cases.py
docs/: Enhancement_Framework_Validation_Report.md  Enhancement_User_Guide.md  Job Scorer Improvement Doc - Implementation Guide.md  Job Scorer Improvement Doc.md  README.md  implementation-roadmap.md  implentation-roadmap-v2.md  improvement.md  priority_1.md  priority_5.md  scoring_v2_refactor_plan.md  type_hinting_improvements.md  upgrade-doc.md
docs/archive/: implementation-roadmap-v2.md  scoring_v2_refactor_plan.md
scoring/: __init__.py  cli.py  config.py  data_loader.py  py.typed  scoring_engine.py  scoring_v2.py  scoring_v2_backup.py
scripts/: test_ci_locally.sh
tests/: README.md  conftest.py  test_runner.py
tests/data/v1/: basic_test.csv
tests/data/v2/: basic_test.csv  bonus_cap_test.csv  bonus_cap_test.json  core_gap_test.csv  core_gap_test.json
tests/unit/: __init__.py  test_cli_error_handling.py  test_emphasis.py  test_enhanced_scoring.py  test_enhancements.py  test_scoring.py  test_setup.py  test_validation.py
